crates/aven-check/tests/fixtures/check/invalid/shadow-unbound.av
broken =
  value := 1
  value
